    in the folder that tab label points to.

* Added new menu option 'Edit'->'Copy Path(s)' to copy text paths for the
    selection into clipboard.

* Added new config option 'home_path' (unset by default) which defines
    the file path or URI string to open when 'Home Folder' is activated
    in side pane, toolbar, or menu. Available only with LibFM 1.2.0 or
    newer.

* Added new config option 'focus_previous' defaulted to false (preserving
    old behavior) which allows select and focus the folder where we came
    from when we go into parent directory. It's available only with LibFM
    1.2.0 or newer.


Changes on 1.1.0 since 1.0.1:

* Corrected underscores (mnemonics) on every menu and dialog.

* Migrated to new libfm APIs for simplification.

* Fixed GTK+ 3.0 compatibility problems. Added switch --with-gtk=N to
    configure script where N is GTK+ version: 2 or 3. Default is 2.

* Added option 'Treat backup files as hidden' into 'Display' tab of the
    preferences dialog and 'Use Application Startup Notify by default'
    into 'Advanced' tab. Both have effect with libfm 1.0.2 or newer.

* Added rintime option '--new-win' to open new window instead of new tab
    when started with some directory name.

* Added runtime option '--role' to set WM_WINDOW_ROLE property which can
    be used by window manager to do arrangement of window. Works only if
    option '--new-win' is also used.

* Added search engine support. Works if compiled with libfm-gtk >= 1.0.2.

* The items which cannot act (such as "Copy" when no items selected) now
    are disabled in menu and toolbar.

* Experimental implementation of option --one-screen to apply --desktop
    option only for one (current) X-Screen.

* Implemented side pane hiding, bound to 'F9' key press.


Changes on 1.0.1 since 1.0.0:

* Implemented basic multi-monitor support.

* Implemented toggling fullscreen mode via 'F11' key press.

* Added tab 'Layout' into Preferences dialog.

* Few lesser bugfixes.