@@ -2,7 +2,7 @@
  *      app-config.h
  *
  *      Copyright 2010 - 2011 PCMan <pcman.tw@gmail.com>
- *      Copyright 2012-2013 Andriy Grytsenko (LStranger) <andrej@rep.kiev.ua>
+ *      Copyright 2012-2014 Andriy Grytsenko (LStranger) <andrej@rep.kiev.ua>
  *
  *      This program is free software; you can redistribute it and/or modify
  *      it under the terms of the GNU General Public License as published by
@@ -124,6 +124,7 @@ struct _FmAppConfig
     gboolean focus_previous;
 #endif
     gboolean maximized;
+    gboolean close_on_unmount;
 
     FmSidePaneMode side_pane_mode;
 
